# gittyhub

./: .gitignore  Cargo.toml  README.md  logging.yaml
layout_engine/: Cargo.toml  README.md  log.yaml
layout_engine/examples/: splits.rs
layout_engine/src/: lib.rs
src/: app.rs  events.rs  main.rs  mock.rs  models.rs  ui.rs
src/gh/: client.rs  models.rs
src/models/: mod.rs  pr.rs  user.rs
src/ui/: component.rs  mod.rs  palette.rs  utils.rs
src/views/: full_pull_request.rs  mod.rs  pull_requests.rs
