[package]
authors = ["Patrick Allen <prallen90@gmail.com>"]
edition = "2018"
name = "gitty"
version = "0.1.0"

[dependencies]
lazy_static = "1.3.0"
log = "0.4.6"
log4rs = "0.8.3"
reqwest = "0.9.15"
serde_derive = "1.0.90"
serde_json = "1.0.39"
termion = "1.5.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.90"

[dependencies.chrono]
features = ["serde", "rustc-serialize"]
version = "0.4.6"

[dependencies.layout_engine]
path = "./layout_engine"
